welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:35: error: unclosed comment
/*estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
^BDRBuggle:3: error: Missing closing brace `}' assumed here
	if (litMessage()=="R") {
        ^BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                ^BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                         ^BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                                  ^BDRBuggle:12: error: ')' expected but 'if' found.
	if (litMessage(): String :=A) {
        ^BDRBuggle:15: error: ';' expected but 'if' found.
	if (litMessage(): String :=B) {
        ^